# libgodot-project

./: .gitignore  CMakeLists.txt  README.md  SConstruct  build_libgodot.py  justfile
SwiftGodot/samples/cpp_sample/: CMakeLists.txt
godot/: .gitrepo  SConstruct
godot-cpp/: .gitrepo
godot/core/: core_bind.cpp  typedefs.h
godot/core/extension/: gdextension_special_compat_hashes.cpp  godot_instance.cpp  godot_instance.h  libgodot.h
godot/core/io/: ip.cpp
godot/core/object/: object.cpp  object.h
godot/core/os/: mutex.h
godot/doc/classes/: DisplayServer.xml  Window.xml
godot/drivers/: register_driver_types.cpp
godot/drivers/apple/: joypad_apple.h  joypad_apple.mm  rendering_context_driver_vulkan_moltenvk.h  rendering_context_driver_vulkan_moltenvk.mm  rendering_native_surface_apple.h  rendering_native_surface_apple.mm
godot/drivers/apple_embedded/: display_server_apple_embedded.mm  rendering_context_driver_vulkan_apple_embedded.h  rendering_context_driver_vulkan_apple_embedded.mm  rendering_native_surface_apple_embedded.h  rendering_native_surface_apple_embedded.mm
godot/drivers/d3d12/: rendering_context_driver_d3d12.cpp  rendering_device_driver_d3d12.h
godot/drivers/gles3/: rasterizer_scene_gles3.cpp
godot/drivers/metal/: rendering_context_driver_metal.mm
godot/drivers/vulkan/: rendering_context_driver_vulkan.cpp  rendering_native_surface_vulkan.h
godot/editor/animation/: animation_blend_space_1d_editor.cpp  animation_blend_space_2d_editor.cpp  animation_state_machine_editor.cpp
godot/editor/docks/: editor_dock_manager.cpp
godot/editor/file_system/: editor_file_system.cpp
godot/main/: performance.cpp
godot/platform/: platform_builders.py
godot/platform/android/: display_server_android.cpp  rendering_native_surface_android.cpp
godot/platform/macos/: SCsub  detect.py  display_server_embedded.h  display_server_embedded.mm  display_server_macos.h  display_server_macos.mm  embedded_debugger.h  embedded_debugger.mm  embedded_gl_manager.mm  godot_main_macos.mm  libgodot_macos.mm  os_macos.h  os_macos.mm  (+2 more)
godot/servers/: SCsub  display_server.cpp  display_server.h  display_server_embedded.h  register_server_types.cpp
samples/cpp_sample/: CMakeLists.txt
samples/cpp_sample/src/: main.cpp
samples/project/: project.godot
(+30 files in other folders)
